Esta no es una rama definitiva, se esta probando distintas funciones, se puede trabajar en ella pero es muy suceptible a cambios. Por ahora funciona El AFDmin y MDD para una sola ER dada en el main

--- a/imp.cabal
+++ b/imp.cabal
@@ -27,6 +27,7 @@ executable imp
   build-depends:
       base
     , text
+    , containers
     , imp
   default-language: Haskell2010
 
@@ -36,5 +37,6 @@ test-suite imp-test
   main-is: Spec.hs
   build-depends:
       base
+    , containers
     , imp
   default-language: Haskell2010
