--- a/imp.cabal
+++ b/imp.cabal
@@ -15,6 +15,7 @@ library
       Com.Syrion.Models.Lexer.Token
       Com.Syrion.Models.Lexer.Lexer
       Com.Syrion.Models.Lenguajes.ImpSpec
+      Com.Syrion.Models.Lenguajes.ImpFast
       Com.Syrion.Utils.Util
   build-depends:
       base       >=4.16 && <5
