Se completan 14 test funcionales mediante golden test, igualmente se agrego el IMP.md y se modificó el REAMDE.md

--- a/imp.cabal
+++ b/imp.cabal
@@ -23,6 +23,7 @@ library
     , text
   default-language: Haskell2010
 
+-- Ejecutable principal (demo)
 executable imp
   hs-source-dirs: app
   main-is: Main.hs
@@ -33,12 +34,39 @@ executable imp
     , imp
   default-language: Haskell2010
 
-test-suite imp-test
-  type: exitcode-stdio-1.0
+-- (Opcional) Ejecutable auxiliar de pruebas
+executable test-imp
   hs-source-dirs: test
-  main-is: Spec.hs
+  main-is: TestImp.hs
   build-depends:
       base
+    , containers
+    , imp
+  default-language: Haskell2010
+
+-- Test suite con Hspec (mínimo)
+test-suite imp-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  build-depends:
+      base
+    , imp
+    , hspec
+    , directory
+    , filepath
+    , text
+    , bytestring
+  default-language:    Haskell2010
+
+
+-- Ejecutable para generar golden
+executable make-golden
+  hs-source-dirs: app
+  main-is: MakeGolden.hs
+  build-depends:
+      base
+    , text
     , containers
     , imp
   default-language: Haskell2010
